--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800display=swap"
     rel="stylesheet">
+
   <style>
     :root {
       --bg: #0b1020;
@@ -235,294 +236,11 @@
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     }
   </style>
+  <script type="module" src="converter.js"></script>
 </head>
 
 <body>
-  <div class="app">
-    <header>
-      <h1>Image Converter & Compressor</h1>
-      <div class="stats" id="stats-top"></div>
-    </header>
-
-    <div class="grid">
-      <section class="card">
-        <div id="drop" class="drop">
-          <div>
-            <div style="font-size:1.05rem; font-weight:700; color:#cdd6ff;">Drop image here or click to choose</div>
-            <div class="muted">JPG • PNG • WEBP • AVIF • GIF (first frame)</div>
-          </div>
-          <input id="file" type="file" accept="image/*" style="display:none" />
-        </div>
-
-        <div class="previews" style="margin-top:16px">
-          <div class="preview" id="origBox" hidden>
-            <header>
-              <strong>Original</strong>
-              <span class="badge" id="origInfo">—</span>
-            </header>
-            <div class="body"><img id="origImg" alt="Original preview" /></div>
-          </div>
-          <div class="preview" id="outBox" hidden>
-            <header>
-              <strong>Output</strong>
-              <span class="badge" id="outInfo">—</span>
-            </header>
-            <div class="body"><img id="outImg" alt="Output preview" /></div>
-          </div>
-        </div>
-      </section>
-
-      <aside class="card controls">
-        <div class="row3">
-          <label>Output format
-            <select id="format">
-              <option value="image/webp">WEBP (small, widely supported)</option>
-              <option value="image/jpeg">JPEG</option>
-              <option value="image/avif">AVIF (smallest, newer)</option>
-              <option value="image/png">PNG (lossless)</option>
-            </select>
-          </label>
-          <label>Quality
-            <input id="quality" type="range" min="1" max="100" value="80" />
-            <div class="muted">For lossy formats (JPEG/WEBP/AVIF)</div>
-          </label>
-          <label>Target size (KB)
-            <input id="targetKB" type="number" min="1" step="1" placeholder="Optional e.g. 300" />
-          </label>
-        </div>
-
-        <div class="row">
-          <label>Max width (px)
-            <input id="maxW" type="number" min="1" step="1" placeholder="Auto" />
-          </label>
-          <label>Max height (px)
-            <input id="maxH" type="number" min="1" step="1" placeholder="Auto" />
-          </label>
-        </div>
-
-        <div class="btns">
-          <button id="btnConvert" disabled>Convert / Compress</button>
-          <button id="btnTarget" class="secondary" disabled>Compress to Target KB</button>
-          <button id="btnDownload" disabled>Download</button>
-          <button id="btnClear" class="secondary">Clear</button>
-        </div>
-
-        <div class="muted" id="supportNote"></div>
-      </aside>
-    </div>
-  </div>
-
-  <script>
-    const $ = (id) => document.getElementById(id);
-    const drop = $("drop"), file = $("file");
-    const origBox = $("origBox"), outBox = $("outBox");
-    const origImg = $("origImg"), outImg = $("outImg");
-    const origInfo = $("origInfo"), outInfo = $("outInfo");
-    const statsTop = $("stats-top");
-
-    const formatEl = $("format"), qualityEl = $("quality"), targetKBEl = $("targetKB");
-    const maxWEl = $("maxW"), maxHEl = $("maxH");
-    const btnConvert = $("btnConvert"), btnTarget = $("btnTarget"), btnDownload = $("btnDownload"), btnClear = $("btnClear");
-    const supportNote = $("supportNote");
-
-    let originalFile = null;
-    let originalURL = null;
-    let outputBlob = null;
-    let outputName = "output";
-
-    // Feature notes
-    (function checkSupport() {
-      const supportsAvif = (() => {
-        try {
-          const c = document.createElement('canvas');
-          return c.toDataURL('image/avif').startsWith('data:image/avif');
-        } catch { return false; }
-      })();
-      if (!supportsAvif) {
-        const tip = document.createElement('div');
-        tip.className = 'muted';
-        tip.textContent = 'Note: AVIF export may not be supported in this browser.';
-        supportNote.appendChild(tip);
-      }
-    })();
-
-    // Drop zone interactions
-    drop.addEventListener('click', () => file.click());
-    drop.addEventListener('dragover', (e) => { e.preventDefault(); drop.classList.add('dragover'); });
-    drop.addEventListener('dragleave', () => drop.classList.remove('dragover'));
-    drop.addEventListener('drop', (e) => {
-      e.preventDefault(); drop.classList.remove('dragover');
-      const f = e.dataTransfer.files?.[0]; if (f) loadFile(f);
-    });
-    file.addEventListener('change', () => { const f = file.files?.[0]; if (f) loadFile(f); });
-
-    function bytesToKB(b) { return (b / 1024).toFixed(1); }
-    function extFromMime(m) { return ({ 'image/jpeg': 'jpg', 'image/png': 'png', 'image/webp': 'webp', 'image/avif': 'avif' }[m]) || 'img'; }
-
-    async function loadFile(f) {
-      clearOutput();
-      originalFile = f;
-      outputName = f.name.replace(/\.[^.]+$/, '') || 'image';
-      if (originalURL) URL.revokeObjectURL(originalURL);
-      originalURL = URL.createObjectURL(f);
-      origImg.src = originalURL;
-      origBox.hidden = false;
-      origInfo.textContent = `${f.type || 'unknown'} • ${bytesToKB(f.size)} KB`;
-      statsTop.textContent = `${f.name} — ${bytesToKB(f.size)} KB`;
-      btnConvert.disabled = false;
-      btnTarget.disabled = false;
-    }
-
-    function getMaxDims(imgW, imgH) {
-      const mw = parseInt(maxWEl.value, 10);
-      const mh = parseInt(maxHEl.value, 10);
-      if (!mw && !mh) return { w: imgW, h: imgH };
-      let w = imgW, h = imgH;
-      if (mw && w > mw) { h = Math.round(h * (mw / w)); w = mw; }
-      if (mh && h > mh) { w = Math.round(w * (mh / h)); h = mh; }
-      return { w, h };
-    }
-
-    async function drawToCanvas(imgBitmap, w, h) {
-      const canvas = document.createElement('canvas');
-      canvas.width = w; canvas.height = h;
-      const ctx = canvas.getContext('2d');
-      ctx.drawImage(imgBitmap, 0, 0, w, h);
-      return canvas;
-    }
-
-    function canvasToBlob(canvas, type, quality) {
-      return new Promise((resolve, reject) => {
-        canvas.toBlob(b => b ? resolve(b) : reject(new Error('Export failed')), type, quality);
-      });
-    }
-
-    async function readImageBitmap(file) {
-      const blob = file instanceof Blob ? file : new Blob([file]);
-      const img = await createImageBitmap(blob);
-      return img;
-    }
-
-    async function convertOnce(targetType, qualityPct) {
-      if (!originalFile) return;
-      const img = await readImageBitmap(originalFile);
-      const { w, h } = getMaxDims(img.width, img.height);
-      const canvas = await drawToCanvas(img, w, h);
-
-      // PNG ignores quality; JPEG/WEBP/AVIF use 0..1
-      const q = /image\/(jpeg|webp|avif)/.test(targetType) ? Math.min(Math.max(qualityPct / 100, 0.01), 1) : undefined;
-      const blob = await canvasToBlob(canvas, targetType, q);
-      return { blob, width: w, height: h };
-    }
-
-    async function convertToTargetKB(targetKB, targetType) {
-      if (!originalFile) return;
-      const startBitmap = await readImageBitmap(originalFile);
-      let scale = 1.0;
-      let low = 0.2, high = 0.95; // quality bounds for binary search
-      const maxIter = 12;
-
-      let w = startBitmap.width, h = startBitmap.height;
-      // Respect user-specified max dims first
-      const dims = getMaxDims(w, h); w = dims.w; h = dims.h;
-
-      const lossy = /image\/(jpeg|webp|avif)/.test(targetType);
-      if (!lossy) {
-        // For PNG, we may need to downscale since quality param is ignored
-        low = 1; high = 1; // fixed
-      }
-
-      for (let outer = 0; outer < 6; outer++) {
-        let best = null;
-        let l = low, r = high;
-        for (let i = 0; i < maxIter; i++) {
-          const q = lossy ? (l + r) / 2 : 1;
-          const canvas = await drawToCanvas(startBitmap, Math.max(1, Math.round(w * scale)), Math.max(1, Math.round(h * scale)));
-          const blob = await canvasToBlob(canvas, targetType, lossy ? q : undefined);
-          const kb = blob.size / 1024;
-          best = blob;
-          if (!lossy) break; // can't binary-search quality for PNG
-          if (kb > targetKB) {
-            // too big -> lower quality
-            r = q;
-          } else {
-            // too small -> raise quality
-            l = q;
-          }
-          if (Math.abs(kb - targetKB) < 8) break; // close enough
-        }
-        if (best && best.size / 1024 <= targetKB + 8) return { blob: best, width: Math.round(w * scale), height: Math.round(h * scale) };
-        // Still too big: reduce dimensions by 10% and try again
-        scale *= 0.9;
-        if (Math.round(w * scale) < 16 || Math.round(h * scale) < 16) break;
-      }
-      // Fallback: return last attempt at lowest quality/scale
-      const canvas = await drawToCanvas(startBitmap, Math.max(1, Math.round(w * scale)), Math.max(1, Math.round(h * scale)));
-      const blob = await canvasToBlob(canvas, targetType, lossy ? 0.2 : undefined);
-      return { blob, width: Math.round(w * scale), height: Math.round(h * scale) };
-    }
-
-    function updateOutPreview(info) {
-      const { blob, width, height } = info;
-      outputBlob = blob;
-      outImg.src = URL.createObjectURL(blob);
-      outBox.hidden = false;
-      outInfo.textContent = `${blob.type || 'unknown'} • ${bytesToKB(blob.size)} KB • ${width}×${height}`;
-      btnDownload.disabled = false;
-      const origKB = originalFile ? (originalFile.size / 1024) : 0;
-      const pct = origKB ? Math.round(100 - (blob.size / originalFile.size) * 100) : 0;
-      statsTop.textContent = `${originalFile.name} → ${bytesToKB(blob.size)} KB (${pct}% smaller)`;
-    }
-
-    btnConvert.addEventListener('click', async () => {
-      try {
-        btnConvert.disabled = true;
-        const targetType = formatEl.value;
-        const qualityPct = parseInt(qualityEl.value, 10) || 80;
-        const res = await convertOnce(targetType, qualityPct);
-        updateOutPreview(res);
-      } catch (e) {
-        alert('Conversion failed: ' + e.message);
-      } finally {
-        btnConvert.disabled = false;
-      }
-    });
-
-    btnTarget.addEventListener('click', async () => {
-      try {
-        const kb = parseInt(targetKBEl.value, 10);
-        if (!kb || kb <= 0) return alert('Enter a valid Target size (KB).');
-        btnTarget.disabled = true;
-        const res = await convertToTargetKB(kb, formatEl.value);
-        updateOutPreview(res);
-      } catch (e) {
-        alert('Target compression failed: ' + e.message);
-      } finally {
-        btnTarget.disabled = false;
-      }
-    });
-
-    btnDownload.addEventListener('click', () => {
-      if (!outputBlob) return;
-      const a = document.createElement('a');
-      const ext = extFromMime(outputBlob.type || formatEl.value);
-      a.href = URL.createObjectURL(outputBlob);
-      a.download = `${outputName}.${ext}`;
-      document.body.appendChild(a);
-      a.click();
-      setTimeout(() => { URL.revokeObjectURL(a.href); a.remove(); }, 1000);
-    });
-
-    btnClear.addEventListener('click', () => {
-      originalFile = null; outputBlob = null;
-      origBox.hidden = true; outBox.hidden = true;
-      statsTop.textContent = '';
-      btnConvert.disabled = true; btnTarget.disabled = true; btnDownload.disabled = true;
-      if (originalURL) URL.revokeObjectURL(originalURL); originalURL = null; file.value = '';
-    });
-
-    function clearOutput() { outBox.hidden = true; outImg.src = ''; btnDownload.disabled = true; outputBlob = null; }
-  </script>
+y  <image-converter></image-converter>
 </body>
 
 </html>
