--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Image Converter & Compressor</title>
+  <title>Image Converter & Compressor – Convert, Compress & Optimize Images Online</title>
+  <meta name="description"
+    content="Easily convert and compress images online. Supports JPG, PNG, WEBP, AVIF, GIF. Reduce image size, change format, and optimize for web.">
+  <meta name="keywords"
+    content="image converter, image compressor, convert image online, compress image online, JPG to PNG, PNG to JPG, WEBP converter, AVIF converter, optimize images, reduce image size">
+  <meta name="author" content="Your Name or Brand">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Image Converter & Compressor – Convert, Compress & Optimize Images Online">
+  <meta property="og:description"
+    content="Easily convert and compress images online. Supports JPG, PNG, WEBP, AVIF, GIF. Reduce image size, change format, and optimize for web.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://yourdomain.com">
+  <meta property="og:image" content="https://yourdomain.com/preview-image.jpg">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Image Converter & Compressor – Convert, Compress & Optimize Images Online">
+  <meta name="twitter:description"
+    content="Easily convert and compress images online. Supports JPG, PNG, WEBP, AVIF, GIF. Reduce image size, change format, and optimize for web.">
+  <meta name="twitter:image" content="https://yourdomain.com/preview-image.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800display=swap"
@@ -235,6 +262,22 @@
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     }
   </style>
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Image Converter & Compressor",
+  "url": "https://yourdomain.com",
+  "applicationCategory": "ImageProcessingApplication",
+  "description": "Convert and compress images online. Supports JPG, PNG, WEBP, AVIF, GIF. Reduce file size and optimize images for web.",
+  "operatingSystem": "Web",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  }
+}
 </head>
 
 <body>
@@ -523,6 +566,6 @@
 
     function clearOutput() { outBox.hidden = true; outImg.src = ''; btnDownload.disabled = true; outputBlob = null; }
   </script>
-</body>
+  </body>
 
 </html>
